# farkas

./: .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  README.md  SECURITY.md
.github/workflows/: ci.yml  nightly.yml  release.yml
docs/: certificate-lp-spec.md  corpus.md  evaluation.md  grind.md  protocol.md  release.md  roadmap.md
lean/: Farkas.lean  lake-manifest.json  lakefile.toml  mathlib-drift.sha256
lean/Farkas/: Auto.lean  Fast.lean  Fetch.lean  GrindFast.lean  Instrument.lean  Native.lean  Platform.lean  Telemetry.lean
lean/tests/: fast_corners.lean  grind_fast_smoke.lean  instrument_smoke.lean
oracle/: validate_spec.py
oracle/native/: Cargo.toml
oracle/native/fixtures/: amc12a_2013_p4_call1.jsonl
oracle/native/src/: hybrid.rs  lib.rs  oracle.rs  rat.rs  tiered.rs  types.rs  verify.rs
oracle/native/tests/: daemon_fuzz.rs  property.rs
oracle/native/tests/common/: mod.rs
scripts/: analyze.py  check-mathlib-drift.sh  differential.py  farkas-corpus.py  fast_misses.py  lean_wrap.py  replay.py  replay_live.py  stress.py
